fix: z-index

--- a/content/tool/measure.scss
+++ b/content/tool/measure.scss
@@ -1,5 +1,6 @@
 .tool-measure {
   position: absolute;
+  z-index: 5;
   top: 0;
   left: 0;
 
