--- a/content/tool/select.scss
+++ b/content/tool/select.scss
@@ -1,5 +1,6 @@
 .tool-select {
   position: absolute;
+  z-index: 1;
   top: 0;
   left: 0;
   right: 0;
